src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
:root{
    --bgcolor: #f8f9fa;
    --bgcolor2: #f8f9fa;
    --navcolor: #f0f0f0dc;
    --textcolor: #5a5a5a;
    --color1: #d90429;
    --color2: #1b1b1b;
    --card: rgb(255, 255, 255);
    --font: 'Poppins', sans-serif;
    --border1: #d9042728;
}
.dark-theme{
    --bgcolor: #1b1b1b;
    --bgcolor2: #1b1b1b;
    --navcolor: #1b1b1bce;
    --color2: #f0f0f0;
    --textcolor: #757575;
    --border1: #d9042762;
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: var(--font);
}
html{scroll-behavior: smooth;}
body{
    transition: .2s background;
    background-color: var(--bgcolor);
    position: relative;
    color: var(--color2);
    max-width: 1900px;
    margin: 0 auto;
    font-weight: 300;
}
main{max-width: 1300px; margin: 0 auto;}



.hero-intro{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    img{max-width: 40px; z-index: 1;}
    h1{font-size: 70px; span{color: var(--color1);}}
    h3{
        font-size: 20px;
        font-weight: 300;
        color: var(--textcolor);
    }
    h4{font-size: 30px;}
    p{font-size: 20px; margin-top: 30px;}
    .btns{
        margin: 2em 0;
        a{
            display: inline-block;
            padding: 1em;
            border: 1px solid var(--color1);
            border-radius: 5px;
            color: var(--color1);
            font-weight: 500;
            text-decoration: none;
            transition: .2s background ease;
            margin: 0 3px;
        }
        a:hover{background-color: var(--color1); color: white;}
    }
    .social a{
        text-decoration: none; 
        display: inline-block;
        transition: .3s all;
    }
    .social a:hover{transform: scale(1.10);}
}
@media screen and (max-width: 900px) {
    .hero-intro{
        h1{
            font-size: 60px;
        }
        h3{font-size: 18px;}
        p{font-size: 17px;}
    }
}
.projects,
.about-me,
.stack,
.contact{
    /*width: 70%;
    margin: 0 auto;*/
    padding: 2em 3em;
    h2{
        font-weight: 600;
        font-size: 40px; 
        margin-top: 2.5em;
        margin-bottom: 1.5em;
    }
    /*h2::before{
        content: '<';
    }
    h2::after{
        content: '/>';
    }*/
}

.about-me{
    margin-bottom: 2.5em;
    h2{
        font-size: 24px;
    }
    p{
        width: 70%;
        color: var(--textcolor);
        font-size: 18px;
    }
    .btn{
        margin: 1.5em 0;
        display: inline-block;
        padding: .6em 1em;
        background-color: var(--color1);
        border-radius: 5px;
        color: white;
        text-decoration: none;
        font-weight: 500;
    }
}
@media screen and (max-width: 900px) {
    .about-me{
        p{
            width: 100%;
            text-align: start;
            padding: 1em;
            font-size: 16px;
        }
    }
}

.projects h2,
.stack h2,
.contact h2{
    text-align: center;
    font-size: 55px;
}
.projects{
    border-top: 1px solid var(--border1);
    background-color: var(--bgcolor2);
    .pj-container{
        width: 100%;
        display: grid;
        align-items: stretch;
        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
        gap: 10px;
        /*
        display: flex;
        gap: 5px;
        align-items: center;
        flex-wrap: wrap;
        
        .card{
            overflow: hidden;
            background-size: cover;
            background-repeat: no-repeat;
            background-position: center;
            flex: 30%;
            min-height: 550px;
            border-radius: 5px;
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            box-shadow: rgba(109, 8, 13, 0.2) 0 0 5px 1px;
            .content{
                background-color: rgba(14, 14, 14, 0.548);
                backdrop-filter: blur(10px);
                -webkit-backdrop-filter: blur(10px);
                padding: 1em;
                color: white;
                h4{font-size: 20px; font-weight: 500;}
                p{
                    font-weight: 200; 
                    height: 100px; 
                    overflow-y: auto;
                }
                p::-webkit-scrollbar {
                    width: 5px; 
                }
                p::-webkit-scrollbar-thumb {
                    background-color: #810016; 
                    border-radius: 6px; 
                    cursor: pointer;
                }
            }
            .stack{margin: 5px 0;}
            .stack img{width: 20px; margin: 0 2px;}
            a{
                width: 50%;
                display: inline-block;
                text-decoration: none;
                color: var(--color1);
                border: 1px solid var(--color1);
                text-align: center;
                padding: 1px 15px;
            }
            a:hover{background-color: var(--color1); color: white;}
        }*/
    }
}

.stack-container{
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    gap: 15px 5px;
    background-color: var(--bgcolor);

    .stack-card{
        border: 1px solid rgba(128, 128, 128, 0.137);
        width: 200px;
        padding: 1em;
        border-radius: 5px;
        transition: .3s ease-in-out;
        img{
            width: 100%; 
            object-fit: contain; 
            height: 50px;
        }
        span{
            font-weight: 500;
        }

        &:hover{
            transform: translateY(-5px);
            border-color: var(--border1);
        }
    }
}

.contact{
    background-color: var(--bgcolor2);
    width: 100%;
    form{
        max-width: 500px;
        display: flex;
        flex-direction: column;
        margin: 0 auto;
        margin-bottom: 2em;
        input, textarea{
            background-color: transparent;
            margin-bottom: 1em;
            padding: 1em;
            border: 0;
            border: 1px solid var(--border1);
            border-radius: 10px;
        }
        textarea{
            width: 100%;
            height: 150px;
            resize: none;
            overflow: auto;
        }
        button{
            padding: 1em;
            border: 0;
            border: 1px solid #d9042728;
            border-radius: 10px;
            background-color: var(--color1);
            color: white;
            cursor: pointer;
        }
    }
    p{text-align: center; margin-bottom: 4em; color: var(--textcolor);}
    a{text-decoration: none;}
    h3{font-weight: 400; margin: 1em 0; text-align: center;}
    hr{
        border: 0;
        border: 1px solid var(--border1);
        width: 60%;
        margin: 0 auto;
    }
    .c-container{
        img{max-width: 40px;}
        .tags{
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 15px;
            margin-top: 1em;
            .contact-card{
                cursor: pointer;
                display: flex;
                align-items: center;
                justify-content: center;
                padding: 1em;
                border-radius: 10px;
                gap: 10px;
                color: var(--color1);
                text-decoration: none;
                border: 1px solid;
                transition: .2s ease-in-out;


                &:hover{
                    transform: translateY(-2px);
                    box-shadow: 0 0 5px 1px #c0002031;
                }
            }
        }
    }
    .form-status{
        width: 200px;
        margin: 1em auto;
        padding: 1em;
        border-radius: 5px;
        background-color: rgba(83, 221, 28, 0.164);
        border: 1px solid rgba(83, 221, 28, 0.384);
    }
    .bad{
        background-color: rgba(221, 28, 28, 0.164);
        border: 1px solid rgba(221, 28, 28, 0.315);
        color: var(--color1);
    }
}
footer{
    margin-top: 2.5em;
    border-top: 1px solid #61616142;
    background-color: var(--bgcolor);
    color: var(--textcolor);
    text-align: center;
    padding: 1em;
    bottom: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;

    .tags {
        display: flex;
        flex-direction: column;
        align-items: start;
        gap: 10px;

        a{
            display: flex;
            align-items: center;
            gap: 5px;
            color: var(--textcolor);
            text-decoration: underline;
            
            img{width: 30px;}
        }
    }
}
@media screen and (max-width: 750px){
    .projects,
    .about-me,
    .stack,
    .contact{
        padding: 10px;
    }
}
@media screen and (max-width: 900px) {
    body{
        text-align: center;
    }
    nav{
        .tags{
            display: none;
        }
        .burger{
            display: block;
        }
    }
    .projects{
        
        .pj-container{
            grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
            .card{
                flex: 50%;
                a{width: 100%;}
            }
        }
    }
    .about .about-container,
    .contact .c-container{
        grid-template-columns: 1fr;
        p{width: 100%; margin: 1.5em 0;}
    }
    .contact .c-container .tags{
        flex-wrap: wrap;
    }
}

